# jazz-guru

./: .env.example  .gitignore  CLAUDE.md  MEMORY.md  Makefile  README.md  pyproject.toml
.chunk/: config.json
.circleci/: config.yml
.claude/: settings.json
.claude/skills/blocks-network/: SKILL.md
CLAUDIUS/: NOTES.md  SESSIONS.md
CLAUDIUS/notes/: 2026-05-16-first-impressions.md  2026-05-16-sentry-observability.md  2026-05-17-dtl1000-transcriptions-not-public.md  2026-05-19-autofix-must-poll-itself.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_generated_tools.py  0003_tool_versions_tests.py  0003_turns_trgm.py  0004_turns_trgm.py
blocks/jazz_guru/: agent-card.json  handler.py  pyproject.toml  trigger.py
config/: goal.md  goal.yaml  instruments.yaml  mcp.yaml  policy.yaml
data/: instruments.yaml
data/sandbox/: jg.sb
data/wjazzd/: ATTRIBUTION.md
docs/: music-backends.md
docs/plans/: tier2-tool-tests-and-improvement.md
scripts/: setup.sh
src/jazz_guru/: __init__.py  auth.py  cli.py  cli_tool.py  config.py  db.py  lickmatch.py  llm.py  observability.py  presets.py  server.py  worker.py
src/jazz_guru/actions/: __init__.py  context.py  controller.py  dynamic.py  jobs.py  pruning.py  registry.py  sandbox.py  sandbox_profile.py  schema.py  store.py
src/jazz_guru/client/: __init__.py  audio.py  sdk.py  tui.py
src/jazz_guru/context/: __init__.py  builder.py
src/jazz_guru/distillation/: __init__.py  auto.py  improver.py  playbook.py  reflexion.py  scheduler.py
src/jazz_guru/eval/: __init__.py  judge.py  regression.py  runner.py
src/jazz_guru/harness/: __init__.py  loop.py  session.py
src/jazz_guru/io/: __init__.py  adapters.py  audio_in.py  audio_out.py
src/jazz_guru/logging/: __init__.py  trace.py
src/jazz_guru/memory/: __init__.py  embeddings.py  store.py  summarizer.py
src/jazz_guru/music/: __init__.py  _compat.py  accompaniment.py  analyze.py  errors.py  exercises.py  feedback.py  interfaces.py  models.py  registry.py
src/jazz_guru/notes/: __init__.py
src/jazz_guru/skills/: __init__.py  conditional.py  storage.py
src/jazz_guru/state/: __init__.py  event_log.py  externalize.py  schema.py  snapshot.py
tests/unit/: conftest.py  test_audio.py  test_auth.py  test_blocks_handler.py  test_clarify.py  test_cli_tool.py  test_concurrent_isolation.py  test_config.py  test_context.py  test_controller_streaming.py  test_delegate.py  test_distillation_auto.py  test_dynamic_tools.py  test_embeddings.py  test_eval.py  test_failure_signals.py  test_http_ssrf.py  test_imports.py  test_improver.py  test_lick_match.py  test_llm_config_contract.py  test_llm_streaming.py  test_mcp.py  test_music_backends.py  test_music_phase3.py  test_music_tools.py  test_notes.py  test_patch.py  test_persistent.py  test_predicates.py  test_presets.py  test_process.py  test_pruning.py  test_reflexion_improver_wiring.py  test_render.py  test_rpc.py  test_sandbox_profile.py  test_sandbox_safe.py  test_schema_unify.py  test_sdk.py  (+16 more)
(+63 files in other folders)
