[project]
name = "jazz-guru"
version = "0.1.0"
description = "Local agent harness oriented around music (MusicXML/MIDI/WAV) and text."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "jazz-guru" }]

dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "httpx>=0.27",
    "tenacity>=8.5",
    "tiktoken>=0.7",
    "structlog>=24.1",
    "python-dotenv>=1.0",

    # database
    "sqlalchemy[asyncio]>=2.0",
    "greenlet>=3.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pgvector>=0.3",

    # server / worker
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "rq>=1.16",
    "redis>=5.0",
    "apscheduler>=3.10",

    # observability
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",

    # embeddings (default: Voyage AI; OpenAI optional)
    "voyageai>=0.2.3",

    # music
    "music21>=9.1",
    "mido>=1.3",
    "pretty_midi>=0.2.10",

    # audio analysis + capture
    "librosa>=0.10.2",
    "soundfile>=0.12",
    "sounddevice>=0.4",
    "numpy>=1.26",

    # TUI client
    "textual>=0.70",
]

[project.optional-dependencies]
audio-ml = [
    "torch>=2.3",
    "transformers>=4.42",
]
tts = [
    "piper-tts>=1.2.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
jazz-guru = "jazz_guru.cli:app"
jazz-guru-server = "jazz_guru.server:run"
jazz-guru-worker = "jazz_guru.worker:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jazz_guru"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true
